--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGO_URI = mongodb+srv://hemanth1:hemanth1@cluster0.sckhrc5.mongodb.net/Robotics
-SESSION_SECRET='CZ,]hGvue8#gf:_pHQq3MU'
+MONGO_URI=mongodb://localhost:27017/your-database-name/Robotics
+SESSION_SECRET=your-session-secret
